--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html style='padding:0;margin:0'>
   <body contenteditable="" 
   style="border: 30px solid #666; background-color: #eee; font-family: Helvetica; padding: 10px; line-height: 1.4em; border-bottom-width: 10px; border-top-width: 20px; margin:0;">
@@ -7,5 +6,6 @@
     a = document.getElementsByTagName('body')[0];
     a.innerText = window.localStorage["scratchpad"];
     window.getSelection().collapse(a, 0);
+    b = window.setInterval(function(){a.innerText = window.localStorage["scratchpad"];},100);
     a.addEventListener("input", function(e) {window.localStorage["scratchpad"] = e.target.innerText;});
 </script>  
