--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html style='padding:0;margin:0' manifest="/app.manifest>
+<html style='padding:0;margin:0' manifest="/app.manifest">
   <body contenteditable="" 
   style="border: 30px solid #666; background-color: #eee; font-family: monospace; padding: 10px; line-height: 1.4em; border-bottom-width: 10px; border-top-width: 20px; margin:0;">
 </html>
