--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<html style='padding:0;margin:0' manifest="/scratchpad/app.manifest">
-  <body contenteditable="" 
-  style="border: 30px solid #666; background-color: #eee; font-family: monospace; padding: 10px; line-height: 1.4em; border-bottom-width: 10px; border-top-width: 20px; margin:0;">
+<html style='padding:20px 30px 10px;margin:0;background:#666' manifest="/scratchpad/app.manifest">
+  <body contenteditable
+  style="background: #eee; font-family: monospace; padding: 10px; line-height: 1.4em; margin:0;">
 </html>
 <script type="text/javascript">
     a = document.getElementsByTagName('body')[0];
